frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: diy-k8s
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 80
    nodePort: 30000
  selector:
    app: frontend
