inventory-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: inventory-service
  namespace: diy-k8s
spec:
  ports:
  - port: 3001
    targetPort: 3001
  selector:
    app: inventory-service
