postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: diy-k8s
spec:
  type: NodePort
  ports:
  - port: 5432
    targetPort: 5432
    nodePort: 30007  # 원하는 포트 번호로 설정
  selector:
    app: postgres
