user-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-service
  namespace: diy-k8s
spec:
  ports:
  - port: 3000
    targetPort: 3000
  selector:
    app: user-service
